--- a/IngameScript1/MDK/MDK.options.props
+++ b/IngameScript1/MDK/MDK.options.props
@@ -6,7 +6,7 @@
     -->
     <MDKVersion>1.2.22</MDKVersion>
     <MDKTrimTypes>
-      <Enabled>yes</Enabled>
+      <Enabled>no</Enabled>
     </MDKTrimTypes>
     <MDKMinify>
       <Enabled>no</Enabled>
